feat : roll dice functionality

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ style="display: flex; justify-content: space-evenly; align-items: center; height
     <canvas id="myCanvas" style="border: 2px solid black;" width="800" height="800">hello There</canvas>
     <button id="start">Start</button>
     <button id="diceroll" style="display: none;">Roll the Dice</button>
+    <div id="rolledDice"></div>
     <div id="player1"></div>
     <div id="player2"></div>
 <!-- </canvas> -->
